--- a/lang/en.json
+++ b/lang/en.json
@@ -7,10 +7,15 @@
     "Settings": "Settings",
     "Log Out": "Log Out",
     "Platform": "Platform",
+    "Wallet Management": "Wallet Management",
+    "Wallet": "Wallet",
+    "All Transactions": "All Transactions",
+    "Wallet Requests": "Wallet Requests",
+    "Crypto Wallet": "Crypto Wallet",
+    "Create New User": "Create New User",
     "Users Management": "Users Management",
     "Users": "Users",
     "All Users": "All Users",
-    "Create New User": "Create New User",
     "Roles & Permissions": "Roles & Permissions",
     "Roles": "Roles",
     "All Roles": "All Roles",
@@ -26,6 +31,20 @@
     "Profile": "Profile",
     "Password": "Password",
     "Appearance": "Appearance",
+    "Wallet Dashboard": "Wallet Dashboard",
+    "USDT Wallet": "USDT Wallet",
+    "Transactions": "Transactions",
+    "Deposit": "Deposit",
+    "Withdraw": "Withdraw",
+    "Recent Transactions": "Recent Transactions",
+    "Your latest deposits and withdrawals.": "Your latest deposits and withdrawals.",
+    "Type": "Type",
+    "User": "User",
+    "TXID": "TXID",
+    "Amount": "Amount",
+    "Date": "Date",
+    "Withdrawal": "Withdrawal",
+    "View All Transactions": "View All Transactions",
     "Copy to clipboard": "Copy to clipboard",
     "files": "files",
     "No file chosen": "No file chosen",
@@ -63,6 +82,10 @@
     "Please verify your email address by clicking on the link we just emailed to you.": "Please verify your email address by clicking on the link we just emailed to you.",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
     "Resend verification email": "Resend verification email",
+    "Deposit USDT": "Deposit USDT",
+    "Select Wallet": "Select Wallet",
+    "submit": "submit",
+    "Withdrawal USDT": "Withdrawal USDT",
     "Edit Language": "Edit Language",
     "Language Name": "Language Name",
     "Code": "Code",
@@ -136,7 +159,19 @@
     "Inactive": "Inactive",
     "Email Verified": "Email Verified",
     "Role": "Role",
+    "Wallet Balance": "Wallet Balance",
     "None": "None",
+    "Create Wallet": "Create Wallet",
+    "Create New": "Create New",
+    "wallet Name": "wallet Name",
+    "wallet Address": "wallet Address",
+    "wallet Adress": "wallet Adress",
+    " Status": " Status",
+    "Wallet Status": "Wallet Status",
+    "Adress": "Adress",
+    "Status": "Status",
+    "All Wallet Requests": "All Wallet Requests",
+    "Processed": "Processed",
     "Manage your profile and account settings": "Manage your profile and account settings",
     "Showing": "Showing",
     "to": "to",
@@ -160,5 +195,7 @@
     "Translations Synced Successfully": "Translations Synced Successfully",
     "Translation Updated Successfully": "Translation Updated Successfully",
     "User updated successfully!": "User updated successfully!",
-    "Are you sure you want to delete this User?": "Are you sure you want to delete this User?"
+    "Are you sure you want to delete this User?": "Are you sure you want to delete this User?",
+    "Wallet Request Approved Successfully": "Wallet Request Approved Successfully",
+    "Wallet Request Rejected Successfully": "Wallet Request Rejected Successfully"
 }
