--- a/lang/ar.json
+++ b/lang/ar.json
@@ -8,11 +8,11 @@
     "Log Out": "تسجيل الخروج",
     "Platform": "المنصة",
     "Users Management": "إدارة المستخدمين",
-    "Users": "المستخدمين",
+    "Users": "المستخدمون",
     "All Users": "جميع المستخدمين",
     "Create New User": "إنشاء مستخدم جديد",
     "Roles & Permissions": "الأدوار والصلاحيات",
-    "Roles": "الادوار",
+    "Roles": "الأدوار",
     "All Roles": "جميع الأدوار",
     "Create New Role": "إنشاء دور جديد",
     "Permissions": "الصلاحيات",
@@ -22,55 +22,55 @@
     "Languages": "اللغات",
     "Activity Logs": "سجلات النشاط",
     "Notifications": "الإشعارات",
-    "Recent notifications and alerts": "الإشعارات والتنبيهات الحديثة",
+    "Recent notifications and alerts": "أحدث الإشعارات والتنبيهات",
     "Profile": "الملف الشخصي",
     "Password": "كلمة المرور",
     "Appearance": "المظهر",
     "Copy to clipboard": "نسخ إلى الحافظة",
     "files": "ملفات",
     "No file chosen": "لم يتم اختيار ملف",
-    "Choose files": "اختر الملفات",
-    "Choose file": "اختر ملف",
-    "Toggle password visibility": "تبديل رؤية كلمة المرور",
-    "Toggle sidebar": "تبديل الشريط الجانبي",
-    "auth.password": "كلمة المرور",
+    "Choose files": "اختيار ملفات",
+    "Choose file": "اختيار ملف",
+    "Toggle password visibility": "إظهار \/ إخفاء كلمة المرور",
+    "Toggle sidebar": "إظهار \/ إخفاء القائمة الجانبية",
+    "auth.password": "كلمة المرور غير صحيحة",
     "Confirm password": "تأكيد كلمة المرور",
-    "This is a secure area of the application. Please confirm your password before continuing.": "هذه منطقة آمنة في التطبيق. يرجى تأكيد كلمة المرور قبل المتابعة.",
+    "This is a secure area of the application. Please confirm your password before continuing.": "هذه منطقة آمنة، يرجى تأكيد كلمة المرور للمتابعة.",
     "Confirm": "تأكيد",
     "A reset link will be sent if the account exists.": "سيتم إرسال رابط إعادة التعيين إذا كان الحساب موجودًا.",
     "Forgot password": "نسيت كلمة المرور",
-    "Enter your email to receive a password reset link": "أدخل بريدك الإلكتروني لتلقي رابط إعادة تعيين كلمة المرور",
+    "Enter your email to receive a password reset link": "أدخل بريدك الإلكتروني لاستلام رابط إعادة تعيين كلمة المرور",
     "Email Address": "البريد الإلكتروني",
     "Email password reset link": "إرسال رابط إعادة تعيين كلمة المرور",
-    "Or, return to": "أو العودة إلى",
+    "Or, return to": "أو الرجوع إلى",
     "log in": "تسجيل الدخول",
-    "auth.failed": "فشل المصادقة",
+    "auth.failed": "بيانات الدخول غير صحيحة",
     "Log in to your account": "تسجيل الدخول إلى حسابك",
-    "Enter your email and password below to log in": "أدخل بريدك الإلكتروني وكلمة المرور أدناه لتسجيل الدخول",
+    "Enter your email and password below to log in": "أدخل البريد الإلكتروني وكلمة المرور لتسجيل الدخول",
     "Forgot your password?": "نسيت كلمة المرور؟",
     "Remember me": "تذكرني",
     "Don't have an account?": "ليس لديك حساب؟",
     "Sign up": "إنشاء حساب",
-    "Create an account": "إنشاء حساب",
-    "Enter your details below to create your account": "أدخل بياناتك أدناه لإنشاء حسابك",
+    "Create an account": "إنشاء حساب جديد",
+    "Enter your details below to create your account": "أدخل بياناتك لإنشاء حساب",
     "Name": "الاسم",
     "Full name": "الاسم الكامل",
     "Create account": "إنشاء حساب",
     "Already have an account?": "لديك حساب بالفعل؟",
     "Reset password": "إعادة تعيين كلمة المرور",
-    "Please enter your new password below": "يرجى إدخال كلمة المرور الجديدة أدناه",
+    "Please enter your new password below": "يرجى إدخال كلمة المرور الجديدة",
     "Email": "البريد الإلكتروني",
-    "Please verify your email address by clicking on the link we just emailed to you.": "يرجى التحقق من عنوان بريدك الإلكتروني بالنقر على الرابط الذي أرسلناه إليك للتو.",
-    "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى عنوان البريد الإلكتروني الذي قدمته أثناء التسجيل.",
-    "Resend verification email": "إعادة إرسال بريد التحقق",
-    "Edit Language": "تحرير اللغة",
+    "Please verify your email address by clicking on the link we just emailed to you.": "يرجى تأكيد بريدك الإلكتروني عبر الرابط المرسل إليك.",
+    "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى بريدك الإلكتروني.",
+    "Resend verification email": "إعادة إرسال رسالة التحقق",
+    "Edit Language": "تعديل اللغة",
     "Language Name": "اسم اللغة",
-    "Code": "الكود",
-    "Language Code (e.g., en, fr, ar)": "كود اللغة (مثال: en, fr, ar)",
-    "Direction": "الاتجاه",
-    "Left to Right (LTR)": "من اليسار إلى اليمين (LTR)",
-    "Right to Left (RTL)": "من اليمين إلى اليسار (RTL)",
-    "Active": "نشط",
+    "Code": "الرمز",
+    "Language Code (e.g., en, fr, ar)": "رمز اللغة (مثال: en, fr, ar)",
+    "Direction": "اتجاه النص",
+    "Left to Right (LTR)": "من اليسار إلى اليمين",
+    "Right to Left (RTL)": "من اليمين إلى اليسار",
+    "Active": "مفعل",
     "Default": "افتراضي",
     "Save": "حفظ",
     "Add New Language": "إضافة لغة جديدة",
@@ -78,25 +78,25 @@
     "Descending": "تنازلي",
     "Ascending": "تصاعدي",
     "Actions": "الإجراءات",
-    "No data found": "لم يتم العثور على بيانات",
-    "Created Events": "الأحداث المنشأة",
-    "Updated Events": "الأحداث المحدثة",
-    "Deleted Events": "الأevents المحذوفة",
+    "No data found": "لا توجد بيانات",
+    "Created Events": "أحداث الإنشاء",
+    "Updated Events": "أحداث التحديث",
+    "Deleted Events": "أحداث الحذف",
     "Total Events": "إجمالي الأحداث",
     "Description": "الوصف",
-    "Causer": "المسبب",
-    "Model": "النموذج",
+    "Causer": "المنفذ",
+    "Model": "الموديل",
     "Event": "الحدث",
     "Properties": "الخصائص",
-    "Logged At": "مسجل في",
+    "Logged At": "تاريخ التسجيل",
     "Permission Name": "اسم الصلاحية",
     "Guard Name": "اسم الحارس",
     "Select Guard Name": "اختر اسم الحارس",
     "Create": "إنشاء",
-    "Edit Permission": "تحرير الصلاحية",
+    "Edit Permission": "تعديل الصلاحية",
     "Update": "تحديث",
     "Create permission": "إنشاء صلاحية",
-    "Edit": "تحرير",
+    "Edit": "تعديل",
     "Delete": "حذف",
     "Role Name": "اسم الدور",
     "Deselect All": "إلغاء تحديد الكل",
@@ -136,7 +136,7 @@
     "Inactive": "غير نشط",
     "Email Verified": "البريد الإلكتروني موثق",
     "Role": "الدور",
-    "None": "لا شيء",
+    "None": "لا يوجد",
     "Manage your profile and account settings": "إدارة ملفك الشخصي وإعدادات حسابك",
     "Showing": "عرض",
     "to": "إلى",
@@ -161,25 +161,25 @@
     "Translation Updated Successfully": "تم تحديث الترجمة بنجاح",
     "User updated successfully!": "تم تحديث المستخدم بنجاح!",
     "Are you sure you want to delete this User?": "هل أنت متأكد أنك تريد حذف هذا المستخدم؟",
-    "Wallet Management": "إدارة المحفظة",
+    "Wallet Management": "إدارة المحافظ",
     "Wallet": "المحفظة",
-    "All Transactions": "جميع المعاملات",
+    "All Transactions": "جميع العمليات",
     "Wallet Requests": "طلبات المحفظة",
     "Crypto Wallet": "محفظة العملات الرقمية",
-    "Wallet Dashboard": "لوحة تحكم المحفظة",
+    "Wallet Dashboard": "لوحة المحفظة",
     "USDT Wallet": "محفظة USDT",
-    "Transactions": "المعاملات",
+    "Transactions": "العمليات",
     "Deposit": "إيداع",
     "Withdraw": "سحب",
-    "Recent Transactions": "أحدث المعاملات",
-    "Your latest deposits and withdrawals.": "آخر عمليات الإيداع والسحب الخاصة بك.",
+    "Recent Transactions": "آخر العمليات",
+    "Your latest deposits and withdrawals.": "آخر عمليات الإيداع والسحب.",
     "Type": "النوع",
     "User": "المستخدم",
-    "TXID": "معرّف العملية (TXID)",
+    "TXID": "رقم العملية",
     "Amount": "المبلغ",
     "Date": "التاريخ",
     "Withdrawal": "سحب",
-    "View All Transactions": "عرض جميع المعاملات",
+    "View All Transactions": "عرض جميع العمليات",
     "Don\\'t have an account?": "ليس لديك حساب؟",
     "Deposit USDT": "إيداع USDT",
     "Select Wallet": "اختر المحفظة",
@@ -198,5 +198,41 @@
     "All Wallet Requests": "جميع طلبات المحفظة",
     "Processed": "تمت المعالجة",
     "Wallet Request Approved Successfully": "تمت الموافقة على طلب المحفظة بنجاح",
-    "Wallet Request Rejected Successfully": "تم رفض طلب المحفظة بنجاح"
+    "Wallet Request Rejected Successfully": "تم رفض طلب المحفظة بنجاح",
+    "Investment": "الاستثمار",
+    "View Plans": "عرض الخطط",
+    "My Investments": "استثماراتي",
+    "Plans and Members Management": "إدارة الخطط والمشتركين",
+    "All Plans": "جميع الخطط",
+    "All Members": "جميع المشتركين",
+    "Plan Name": "اسم الخطة",
+    "Required Amount": "المبلغ المطلوب",
+    "Profit": "الربح",
+    "Current Profit ": "الربح الحالي",
+    "Subscribe Duration": "مدة الاشتراك",
+    "Withdraw Profit": "سحب الأرباح",
+    "New Plan Details": "تفاصيل الخطة الجديدة",
+    "Profit Type": "نوع الربح",
+    "Select ": "اختر",
+    "Daily": "يومي",
+    "Weekly": "أسبوعي",
+    "Monthly": "شهري",
+    "Yearly": "سنوي",
+    "Edit Plan Details": "تعديل تفاصيل الخطة",
+    "Plan Status": "حالة الخطة",
+    "Create New Plan": "إنشاء خطة جديدة",
+    "Plan Members": "مشتركو الخطة",
+    "Leave Investment": "إنهاء الاستثمار",
+    "Investment Plans": "خطط الاستثمار",
+    "Set up your investment plan and start making money": "قم بإعداد خطة الاستثمار الخاصة بك وابدأ في تحقيق الأرباح",
+    "Net Profits": "صافي الأرباح",
+    "Start Investing Now": "ابدأ الاستثمار الآن",
+    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
+    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
+    "Investment Not Found": "الاستثمار غير موجود",
+    "Plan Not Found": "الخطة غير موجودة",
+    "You are already subscribed to this plan": "أنت مشترك بالفعل في هذه الخطة",
+    "Insufficient Balance": "الرصيد غير كافٍ",
+    "Subscribed Successfully": "تم الاشتراك بنجاح",
+    "Amount Deposited Successfully": "تم إيداع المبلغ بنجاح"
 }
