--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,9 @@
     "Settings": "Settings",
     "Log Out": "Log Out",
     "Platform": "Platform",
+    "Investment": "Investment",
+    "View Plans": "View Plans",
+    "My Investments": "My Investments",
     "Wallet Management": "Wallet Management",
     "Wallet": "Wallet",
     "All Transactions": "All Transactions",
@@ -25,6 +28,9 @@
     "Create New Permission": "Create New Permission",
     "Languages & Translations": "Languages & Translations",
     "Languages": "Languages",
+    "Plans and Members Management": "Plans and Members Management",
+    "All Plans": "All Plans",
+    "All Members": "All Members",
     "Activity Logs": "Activity Logs",
     "Notifications": "Notifications",
     "Recent notifications and alerts": "Recent notifications and alerts",
@@ -112,6 +118,13 @@
     "Event": "Event",
     "Properties": "Properties",
     "Logged At": "Logged At",
+    "Plan Name": "Plan Name",
+    "Required Amount": "Required Amount",
+    "Profit": "Profit",
+    "Current Profit ": "Current Profit ",
+    "Subscribe Duration": "Subscribe Duration",
+    "Status": "Status",
+    "Withdraw Profit": "Withdraw Profit",
     "Permission Name": "Permission Name",
     "Guard Name": "Guard Name",
     "Select Guard Name": "Select Guard Name",
@@ -121,6 +134,22 @@
     "Create permission": "Create permission",
     "Edit": "Edit",
     "Delete": "Delete",
+    "New Plan Details": "New Plan Details",
+    "Profit Type": "Profit Type",
+    "Select ": "Select ",
+    "Daily": "Daily",
+    "Weekly": "Weekly",
+    "Monthly": "Monthly",
+    "Yearly": "Yearly",
+    "Edit Plan Details": "Edit Plan Details",
+    "Plan Status": "Plan Status",
+    "Create New Plan": "Create New Plan",
+    "Plan Members": "Plan Members",
+    "Leave Investment": "Leave Investment",
+    "Investment Plans": "Investment Plans",
+    "Set up your investment plan and start making money": "Set up your investment plan and start making money",
+    "Net Profits": "Net Profits",
+    "Start Investing Now": "Start Investing Now",
     "Role Name": "Role Name",
     "Deselect All": "Deselect All",
     "Select All": "Select All",
@@ -169,7 +198,6 @@
     " Status": " Status",
     "Wallet Status": "Wallet Status",
     "Adress": "Adress",
-    "Status": "Status",
     "All Wallet Requests": "All Wallet Requests",
     "Processed": "Processed",
     "Manage your profile and account settings": "Manage your profile and account settings",
@@ -189,13 +217,21 @@
     "Permission Updated Successfully": "Permission Updated Successfully",
     "you want to delete this permission?": "you want to delete this permission?",
     "Permission Deleted Successfully": "Permission Deleted Successfully",
+    "Plan Created Successfully": "Plan Created Successfully",
+    "Are you sure you want to delete this User?": "Are you sure you want to delete this User?",
+    "Plan Deleted Successfully": "Plan Deleted Successfully",
+    "Investment Not Found": "Investment Not Found",
+    "Plan Not Found": "Plan Not Found",
+    "You are already subscribed to this plan": "You are already subscribed to this plan",
+    "Insufficient Balance": "Insufficient Balance",
+    "Subscribed Successfully": "Subscribed Successfully",
     "Role Created Successfully": "Role Created Successfully",
     "Are you sure you want to delete this role?": "Are you sure you want to delete this role?",
     "Role Deleted Successfully": "Role Deleted Successfully",
     "Translations Synced Successfully": "Translations Synced Successfully",
     "Translation Updated Successfully": "Translation Updated Successfully",
     "User updated successfully!": "User updated successfully!",
-    "Are you sure you want to delete this User?": "Are you sure you want to delete this User?",
+    "Amount Deposited Successfully": "Amount Deposited Successfully",
     "Wallet Request Approved Successfully": "Wallet Request Approved Successfully",
     "Wallet Request Rejected Successfully": "Wallet Request Rejected Successfully"
 }
