--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,5 +1,5 @@
 {
-    "Saved.": "تم الحفظ.",
+    "Saved.": "تم الحفظ",
     "Dashboard": "لوحة التحكم",
     "Search": "بحث",
     "Repository": "المستودع",
@@ -20,9 +20,9 @@
     "Create New Permission": "إنشاء صلاحية جديدة",
     "Languages & Translations": "اللغات والترجمات",
     "Languages": "اللغات",
-    "Activity Logs": "سجلات النشاط",
+    "Activity Logs": "سجل النشاطات",
     "Notifications": "الإشعارات",
-    "Recent notifications and alerts": "أحدث الإشعارات والتنبيهات",
+    "Recent notifications and alerts": "آخر الإشعارات والتنبيهات",
     "Profile": "الملف الشخصي",
     "Password": "كلمة المرور",
     "Appearance": "المظهر",
@@ -46,28 +46,28 @@
     "log in": "تسجيل الدخول",
     "auth.failed": "بيانات الدخول غير صحيحة",
     "Log in to your account": "تسجيل الدخول إلى حسابك",
-    "Enter your email and password below to log in": "أدخل البريد الإلكتروني وكلمة المرور لتسجيل الدخول",
+    "Enter your email and password below to log in": "أدخل بريدك الإلكتروني وكلمة المرور",
     "Forgot your password?": "نسيت كلمة المرور؟",
     "Remember me": "تذكرني",
     "Don't have an account?": "ليس لديك حساب؟",
     "Sign up": "إنشاء حساب",
-    "Create an account": "إنشاء حساب جديد",
+    "Create an account": "إنشاء حساب",
     "Enter your details below to create your account": "أدخل بياناتك لإنشاء حساب",
     "Name": "الاسم",
     "Full name": "الاسم الكامل",
-    "Create account": "إنشاء حساب",
+    "Create account": "إنشاء الحساب",
     "Already have an account?": "لديك حساب بالفعل؟",
     "Reset password": "إعادة تعيين كلمة المرور",
     "Please enter your new password below": "يرجى إدخال كلمة المرور الجديدة",
     "Email": "البريد الإلكتروني",
-    "Please verify your email address by clicking on the link we just emailed to you.": "يرجى تأكيد بريدك الإلكتروني عبر الرابط المرسل إليك.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "يرجى تأكيد بريدك الإلكتروني عبر الرابط المرسل.",
     "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى بريدك الإلكتروني.",
     "Resend verification email": "إعادة إرسال رسالة التحقق",
     "Edit Language": "تعديل اللغة",
     "Language Name": "اسم اللغة",
     "Code": "الرمز",
-    "Language Code (e.g., en, fr, ar)": "رمز اللغة (مثال: en, fr, ar)",
-    "Direction": "اتجاه النص",
+    "Language Code (e.g., en, fr, ar)": "رمز اللغة (مثال: en, ar)",
+    "Direction": "الاتجاه",
     "Left to Right (LTR)": "من اليسار إلى اليمين",
     "Right to Left (RTL)": "من اليمين إلى اليسار",
     "Active": "مفعل",
@@ -108,9 +108,9 @@
     "Update the appearance settings for your account": "تحديث إعدادات المظهر لحسابك",
     "Light": "فاتح",
     "Dark": "داكن",
-    "System": "النظام",
+    "System": "حسب النظام",
     "Delete account": "حذف الحساب",
-    "Delete your account and all of its resources": "حذف حسابك وجميع موارده",
+    "Delete your account and all of its resources": "حذف الحساب وجميع بياناته",
     "Are you sure you want to delete your account?": "هل أنت متأكد أنك تريد حذف حسابك؟",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "بمجرد حذف حسابك، سيتم حذف جميع موارده وبياناته بشكل دائم. يرجى إدخال كلمة المرور الخاصة بك لتأكيد رغبتك في حذف حسابك بشكل دائم.",
     "Cancel": "إلغاء",
@@ -133,15 +133,15 @@
     "Password Confirmation": "تأكيد كلمة المرور",
     "Create User": "إنشاء مستخدم",
     "Update User": "تحديث المستخدم",
-    "Inactive": "غير نشط",
-    "Email Verified": "البريد الإلكتروني موثق",
+    "Inactive": "غير مفعل",
+    "Email Verified": "البريد موثق",
     "Role": "الدور",
     "None": "لا يوجد",
     "Manage your profile and account settings": "إدارة ملفك الشخصي وإعدادات حسابك",
     "Showing": "عرض",
     "to": "إلى",
     "of": "من",
-    "results": "نتيجة",
+    "results": "نتائج",
     "pagination.previous": "السابق",
     "pagination.next": "التالي",
     "Language Updated Successfully": "تم تحديث اللغة بنجاح",
@@ -159,7 +159,7 @@
     "Role Deleted Successfully": "تم حذف الدور بنجاح",
     "Translations Synced Successfully": "تمت مزامنة الترجمات بنجاح",
     "Translation Updated Successfully": "تم تحديث الترجمة بنجاح",
-    "User updated successfully!": "تم تحديث المستخدم بنجاح!",
+    "User updated successfully!": "تم تحديث المستخدم بنجاح",
     "Are you sure you want to delete this User?": "هل أنت متأكد أنك تريد حذف هذا المستخدم؟",
     "Wallet Management": "إدارة المحافظ",
     "Wallet": "المحفظة",
@@ -202,15 +202,21 @@
     "Investment": "الاستثمار",
     "View Plans": "عرض الخطط",
     "My Investments": "استثماراتي",
-    "Plans and Members Management": "إدارة الخطط والمشتركين",
+    "Plans and Members Management": "إدارة الخطط والأعضاء",
     "All Plans": "جميع الخطط",
-    "All Members": "جميع المشتركين",
+    "All Members": "جميع الأعضاء",
     "Plan Name": "اسم الخطة",
     "Required Amount": "المبلغ المطلوب",
     "Profit": "الربح",
     "Current Profit ": "الربح الحالي",
     "Subscribe Duration": "مدة الاشتراك",
     "Withdraw Profit": "سحب الأرباح",
+    "Net Profits": "صافي الأرباح",
+    "Start Investing Now": "ابدأ الاستثمار الآن",
+    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
+    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
+    "Subscribed Successfully": "تم الاشتراك بنجاح",
+    "Insufficient Balance": "الرصيد غير كافٍ",
     "New Plan Details": "تفاصيل الخطة الجديدة",
     "Profit Type": "نوع الربح",
     "Select ": "اختر",
@@ -225,14 +231,30 @@
     "Leave Investment": "إنهاء الاستثمار",
     "Investment Plans": "خطط الاستثمار",
     "Set up your investment plan and start making money": "قم بإعداد خطة الاستثمار الخاصة بك وابدأ في تحقيق الأرباح",
-    "Net Profits": "صافي الأرباح",
-    "Start Investing Now": "ابدأ الاستثمار الآن",
-    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
-    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
     "Investment Not Found": "الاستثمار غير موجود",
     "Plan Not Found": "الخطة غير موجودة",
     "You are already subscribed to this plan": "أنت مشترك بالفعل في هذه الخطة",
-    "Insufficient Balance": "الرصيد غير كافٍ",
-    "Subscribed Successfully": "تم الاشتراك بنجاح",
-    "Amount Deposited Successfully": "تم إيداع المبلغ بنجاح"
+    "Amount Deposited Successfully": "تم الإيداع بنجاح",
+    "Profit  History": "سجل الأرباح",
+    "All Languages Management and Translations": "إدارة اللغات والترجمات",
+    "Members": "Members",
+    "Profit Withdrawals History": "سجل سحوبات الأرباح",
+    "All Profit Withdrawals": "جميع سحوبات الأرباح",
+    "Pending": "قيد الانتظار",
+    "Approved": "موافق عليه",
+    "Rejected": "مرفوض",
+    "Plans Management": "إدارة الخطط",
+    "Manage your investment plans": "إدارة خطط الاستثمار",
+    "View and manage your investments": "View and manage your investments",
+    "Withdrawal request pending review": "طلب السحب قيد المراجعة",
+    "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.": "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.",
+    "Available in": "متاح خلال",
+    "days": "أيام",
+    "hours": "ساعات",
+    "less than 1 hour": "أقل من ساعة",
+    "No profits available": "لا توجد أرباح متاحة",
+    "All Roles and Management": "All Roles and Management",
+    "All Users and Management": "All Users and Management",
+    "All Crypto Wallets and management": "جميع محافظ العملات الرقمية",
+    "Profit History": "سجل الأرباح"
 }
