fix: Update Arabic translations for consistency and clarity in investment and user management sections

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -237,7 +237,7 @@
     "Amount Deposited Successfully": "تم الإيداع بنجاح",
     "Profit  History": "سجل الأرباح",
     "All Languages Management and Translations": "إدارة اللغات والترجمات",
-    "Members": "Members",
+    "Members": "الأعضاء",
     "Profit Withdrawals History": "سجل سحوبات الأرباح",
     "All Profit Withdrawals": "جميع سحوبات الأرباح",
     "Pending": "قيد الانتظار",
@@ -245,16 +245,16 @@
     "Rejected": "مرفوض",
     "Plans Management": "إدارة الخطط",
     "Manage your investment plans": "إدارة خطط الاستثمار",
-    "View and manage your investments": "View and manage your investments",
+    "View and manage your investments": "عرض وإدارة استثماراتك",
     "Withdrawal request pending review": "طلب السحب قيد المراجعة",
-    "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.": "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.",
+    "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.": "هل أنت متأكد من إنهاء هذا الاستثمار؟ سيتم إرجاع المبلغ الأساسي مع أي أرباح متبقية.",
     "Available in": "متاح خلال",
     "days": "أيام",
     "hours": "ساعات",
     "less than 1 hour": "أقل من ساعة",
     "No profits available": "لا توجد أرباح متاحة",
-    "All Roles and Management": "All Roles and Management",
-    "All Users and Management": "All Users and Management",
+    "All Roles and Management": "جميع الأدوار وإدارتها",
+    "All Users and Management": "جميع المستخدمين وإدارتهم",
     "All Crypto Wallets and management": "جميع محافظ العملات الرقمية",
     "Profit History": "سجل الأرباح"
 }
