feat: Implement withdrawal request management, add registration view, and update internationalization files.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -211,12 +211,6 @@
     "Current Profit ": "الربح الحالي",
     "Subscribe Duration": "مدة الاشتراك",
     "Withdraw Profit": "سحب الأرباح",
-    "Net Profits": "صافي الأرباح",
-    "Start Investing Now": "ابدأ الاستثمار الآن",
-    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
-    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
-    "Subscribed Successfully": "تم الاشتراك بنجاح",
-    "Insufficient Balance": "الرصيد غير كافٍ",
     "New Plan Details": "تفاصيل الخطة الجديدة",
     "Profit Type": "نوع الربح",
     "Select ": "اختر",
@@ -231,11 +225,25 @@
     "Leave Investment": "إنهاء الاستثمار",
     "Investment Plans": "خطط الاستثمار",
     "Set up your investment plan and start making money": "قم بإعداد خطة الاستثمار الخاصة بك وابدأ في تحقيق الأرباح",
+    "Net Profits": "صافي الأرباح",
+    "Start Investing Now": "ابدأ الاستثمار الآن",
+    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
+    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
     "Investment Not Found": "الاستثمار غير موجود",
     "Plan Not Found": "الخطة غير موجودة",
     "You are already subscribed to this plan": "أنت مشترك بالفعل في هذه الخطة",
+    "Insufficient Balance": "الرصيد غير كافٍ",
+    "Subscribed Successfully": "تم الاشتراك بنجاح",
     "Amount Deposited Successfully": "تم الإيداع بنجاح",
     "Profit  History": "سجل الأرباح",
+    "Wallet Deposit Requests": "طلبات إيداع المحفظة",
+    "Withdraw Requests": "طلبات السحب",
+    "الصفحة الرئيسة": "الصفحة الرئيسة",
+    "الخطط": "الخطط",
+    "Referral Code": "رمز الإحالة",
+    "Your Invite Code": "رمز الدعوة الخاص بك",
+    "Copy": "نسخ",
+    "Share your invite code with your friends to get USDT": "شارك رمز الدعوة الخاص بك مع أصدقائك لتحصل على USDT",
     "All Languages Management and Translations": "إدارة اللغات والترجمات",
     "Members": "الأعضاء",
     "Profit Withdrawals History": "سجل سحوبات الأرباح",
@@ -256,5 +264,13 @@
     "All Roles and Management": "جميع الأدوار وإدارتها",
     "All Users and Management": "جميع المستخدمين وإدارتهم",
     "All Crypto Wallets and management": "جميع محافظ العملات الرقمية",
+    "All Wallet Deposit Requests": "جميع طلبات شحن المحافظ",
+    "All Withdraw Requests": "جميع طلبات السحب",
+    "Network": "الشبكة",
+    "Address": "العنوان",
+    "Address Copied": "تم نسخ العنوان",
+    "لا يوجد كافية رصيد للاستفادة من هذه الخدمة": "لا يوجد كافية رصيد للاستفادة من هذه الخدمة",
+    "تم تأكيد طلب السحب بنجاح": "تم تأكيد طلب السحب بنجاح",
+    "تم رفض طلب السحب بنجاح": "تم رفض طلب السحب بنجاح",
     "Profit History": "سجل الأرباح"
 }
