--- a/lang/en.json
+++ b/lang/en.json
@@ -10,7 +10,6 @@
     "Investment": "Investment",
     "View Plans": "View Plans",
     "My Investments": "My Investments",
-    "Profit  History": "Profit  History",
     "Wallet Management": "Wallet Management",
     "Wallet": "Wallet",
     "All Transactions": "All Transactions",
@@ -103,7 +102,6 @@
     "Active": "Active",
     "Default": "Default",
     "Save": "Save",
-    "All Languages Management and Translations": "All Languages Management and Translations",
     "Add New Language": "Add New Language",
     "Sort By": "Sort By",
     "Descending": "Descending",
@@ -120,7 +118,6 @@
     "Event": "Event",
     "Properties": "Properties",
     "Logged At": "Logged At",
-    "Members": "Members",
     "Plan Name": "Plan Name",
     "Required Amount": "Required Amount",
     "Profit": "Profit",
@@ -128,12 +125,6 @@
     "Subscribe Duration": "Subscribe Duration",
     "Status": "Status",
     "Withdraw Profit": "Withdraw Profit",
-    "Profit Withdrawals History": "Profit Withdrawals History",
-    "All Profit Withdrawals": "All Profit Withdrawals",
-    "Pending": "Pending",
-    "Approved": "Approved",
-    "Rejected": "Rejected",
-    "Processed": "Processed",
     "Permission Name": "Permission Name",
     "Guard Name": "Guard Name",
     "Select Guard Name": "Select Guard Name",
@@ -143,8 +134,6 @@
     "Create permission": "Create permission",
     "Edit": "Edit",
     "Delete": "Delete",
-    "Plans Management": "Plans Management",
-    "Manage your investment plans": "Manage your investment plans",
     "New Plan Details": "New Plan Details",
     "Profit Type": "Profit Type",
     "Select ": "Select ",
@@ -156,15 +145,7 @@
     "Plan Status": "Plan Status",
     "Create New Plan": "Create New Plan",
     "Plan Members": "Plan Members",
-    "View and manage your investments": "View and manage your investments",
-    "Withdrawal request pending review": "Withdrawal request pending review",
-    "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.": "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.",
     "Leave Investment": "Leave Investment",
-    "Available in": "Available in",
-    "days": "days",
-    "hours": "hours",
-    "less than 1 hour": "less than 1 hour",
-    "No profits available": "No profits available",
     "Investment Plans": "Investment Plans",
     "Set up your investment plan and start making money": "Set up your investment plan and start making money",
     "Net Profits": "Net Profits",
@@ -175,7 +156,6 @@
     " Permissions": " Permissions",
     "No permissions available for the selected guard": "No permissions available for the selected guard",
     "Edit Role": "Edit Role",
-    "All Roles and Management": "All Roles and Management",
     "Create Role": "Create Role",
     "Update the appearance settings for your account": "Update the appearance settings for your account",
     "Light": "Light",
@@ -206,12 +186,10 @@
     "Create User": "Create User",
     "Update User": "Update User",
     "Inactive": "Inactive",
-    "All Users and Management": "All Users and Management",
     "Email Verified": "Email Verified",
     "Role": "Role",
     "Wallet Balance": "Wallet Balance",
     "None": "None",
-    "All Crypto Wallets and management": "All Crypto Wallets and management",
     "Create Wallet": "Create Wallet",
     "Create New": "Create New",
     "wallet Name": "wallet Name",
@@ -221,6 +199,7 @@
     "Wallet Status": "Wallet Status",
     "Adress": "Adress",
     "All Wallet Requests": "All Wallet Requests",
+    "Processed": "Processed",
     "Manage your profile and account settings": "Manage your profile and account settings",
     "Showing": "Showing",
     "to": "to",
@@ -234,8 +213,6 @@
     "item Deleted Successfully": "item Deleted Successfully",
     "language Deleted Successfully": "language Deleted Successfully",
     "Language Created Successfully": "Language Created Successfully",
-    "Wallet Request Approved Successfully": "Wallet Request Approved Successfully",
-    "Wallet Request Rejected Successfully": "Wallet Request Rejected Successfully",
     "Permission Created Successfully": "Permission Created Successfully",
     "Permission Updated Successfully": "Permission Updated Successfully",
     "you want to delete this permission?": "you want to delete this permission?",
@@ -254,5 +231,44 @@
     "Translations Synced Successfully": "Translations Synced Successfully",
     "Translation Updated Successfully": "Translation Updated Successfully",
     "User updated successfully!": "User updated successfully!",
-    "Amount Deposited Successfully": "Amount Deposited Successfully"
+    "Amount Deposited Successfully": "Amount Deposited Successfully",
+    "Wallet Request Approved Successfully": "Wallet Request Approved Successfully",
+    "Wallet Request Rejected Successfully": "Wallet Request Rejected Successfully",
+    "Profit  History": "Profit  History",
+    "Wallet Deposit Requests": "Wallet Deposit Requests",
+    "Withdraw Requests": "Withdraw Requests",
+    "الصفحة الرئيسة": "الصفحة الرئيسة",
+    "الخطط": "الخطط",
+    "Referral Code": "Referral Code",
+    "Your Invite Code": "Your Invite Code",
+    "Copy": "Copy",
+    "Share your invite code with your friends to get USDT": "Share your invite code with your friends to get USDT",
+    "All Languages Management and Translations": "All Languages Management and Translations",
+    "Members": "Members",
+    "Profit Withdrawals History": "Profit Withdrawals History",
+    "All Profit Withdrawals": "All Profit Withdrawals",
+    "Pending": "Pending",
+    "Approved": "Approved",
+    "Rejected": "Rejected",
+    "Plans Management": "Plans Management",
+    "Manage your investment plans": "Manage your investment plans",
+    "View and manage your investments": "View and manage your investments",
+    "Withdrawal request pending review": "Withdrawal request pending review",
+    "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.": "Are you sure you want to leave this investment? You will receive your initial amount plus any remaining profits.",
+    "Available in": "Available in",
+    "days": "days",
+    "hours": "hours",
+    "less than 1 hour": "less than 1 hour",
+    "No profits available": "No profits available",
+    "All Roles and Management": "All Roles and Management",
+    "All Users and Management": "All Users and Management",
+    "All Crypto Wallets and management": "All Crypto Wallets and management",
+    "All Wallet Deposit Requests": "All Wallet Deposit Requests",
+    "All Withdraw Requests": "All Withdraw Requests",
+    "Network": "Network",
+    "Address": "Address",
+    "Address Copied": "Address Copied",
+    "لا يوجد كافية رصيد للاستفادة من هذه الخدمة": "لا يوجد كافية رصيد للاستفادة من هذه الخدمة",
+    "تم تأكيد طلب السحب بنجاح": "تم تأكيد طلب السحب بنجاح",
+    "تم رفض طلب السحب بنجاح": "تم رفض طلب السحب بنجاح"
 }
