feat: Implement user investment management, profit withdrawal, and member listing features with updated navigation and Arabic language support.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -272,5 +272,6 @@
     "لا يوجد كافية رصيد للاستفادة من هذه الخدمة": "لا يوجد كافية رصيد للاستفادة من هذه الخدمة",
     "تم تأكيد طلب السحب بنجاح": "تم تأكيد طلب السحب بنجاح",
     "تم رفض طلب السحب بنجاح": "تم رفض طلب السحب بنجاح",
-    "Profit History": "سجل الأرباح"
+    "Profit History": "سجل الأرباح",
+    "My Wallet": "محفظتي"
 }
