feat: Add English and Arabic language files with comprehensive translations and a seeder.

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -31,8 +31,8 @@
     "No file chosen": "لم يتم اختيار ملف",
     "Choose files": "اختيار ملفات",
     "Choose file": "اختيار ملف",
-    "Toggle password visibility": "إظهار \/ إخفاء كلمة المرور",
-    "Toggle sidebar": "إظهار \/ إخفاء القائمة الجانبية",
+    "Toggle password visibility": "إظهار / إخفاء كلمة المرور",
+    "Toggle sidebar": "إظهار / إخفاء القائمة الجانبية",
     "auth.password": "كلمة المرور غير صحيحة",
     "Confirm password": "تأكيد كلمة المرور",
     "This is a secure area of the application. Please confirm your password before continuing.": "هذه منطقة آمنة، يرجى تأكيد كلمة المرور للمتابعة.",
@@ -211,6 +211,12 @@
     "Current Profit ": "الربح الحالي",
     "Subscribe Duration": "مدة الاشتراك",
     "Withdraw Profit": "سحب الأرباح",
+    "Net Profits": "صافي الأرباح",
+    "Start Investing Now": "ابدأ الاستثمار الآن",
+    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
+    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
+    "Subscribed Successfully": "تم الاشتراك بنجاح",
+    "Insufficient Balance": "الرصيد غير كافٍ",
     "New Plan Details": "تفاصيل الخطة الجديدة",
     "Profit Type": "نوع الربح",
     "Select ": "اختر",
@@ -225,25 +231,11 @@
     "Leave Investment": "إنهاء الاستثمار",
     "Investment Plans": "خطط الاستثمار",
     "Set up your investment plan and start making money": "قم بإعداد خطة الاستثمار الخاصة بك وابدأ في تحقيق الأرباح",
-    "Net Profits": "صافي الأرباح",
-    "Start Investing Now": "ابدأ الاستثمار الآن",
-    "Plan Created Successfully": "تم إنشاء الخطة بنجاح",
-    "Plan Deleted Successfully": "تم حذف الخطة بنجاح",
     "Investment Not Found": "الاستثمار غير موجود",
     "Plan Not Found": "الخطة غير موجودة",
     "You are already subscribed to this plan": "أنت مشترك بالفعل في هذه الخطة",
-    "Insufficient Balance": "الرصيد غير كافٍ",
-    "Subscribed Successfully": "تم الاشتراك بنجاح",
     "Amount Deposited Successfully": "تم الإيداع بنجاح",
     "Profit  History": "سجل الأرباح",
-    "Wallet Deposit Requests": "طلبات إيداع المحفظة",
-    "Withdraw Requests": "طلبات السحب",
-    "الصفحة الرئيسة": "الصفحة الرئيسة",
-    "الخطط": "الخطط",
-    "Referral Code": "رمز الإحالة",
-    "Your Invite Code": "رمز الدعوة الخاص بك",
-    "Copy": "نسخ",
-    "Share your invite code with your friends to get USDT": "شارك رمز الدعوة الخاص بك مع أصدقائك لتحصل على USDT",
     "All Languages Management and Translations": "إدارة اللغات والترجمات",
     "Members": "الأعضاء",
     "Profit Withdrawals History": "سجل سحوبات الأرباح",
@@ -264,14 +256,19 @@
     "All Roles and Management": "جميع الأدوار وإدارتها",
     "All Users and Management": "جميع المستخدمين وإدارتهم",
     "All Crypto Wallets and management": "جميع محافظ العملات الرقمية",
-    "All Wallet Deposit Requests": "جميع طلبات شحن المحافظ",
-    "All Withdraw Requests": "جميع طلبات السحب",
-    "Network": "الشبكة",
-    "Address": "العنوان",
-    "Address Copied": "تم نسخ العنوان",
-    "لا يوجد كافية رصيد للاستفادة من هذه الخدمة": "لا يوجد كافية رصيد للاستفادة من هذه الخدمة",
-    "تم تأكيد طلب السحب بنجاح": "تم تأكيد طلب السحب بنجاح",
-    "تم رفض طلب السحب بنجاح": "تم رفض طلب السحب بنجاح",
     "Profit History": "سجل الأرباح",
-    "My Wallet": "محفظتي"
+    "Wallet Deposit Requests": "طلبات إيداع المحفظة",
+    "Withdraw Requests": "طلبات السحب",
+    "My Wallet": "محفظتي",
+    "Affiliate  History": "سجل التسويق بالعمولة",
+    "Affiliate Profits": "أرباح التسويق بالعمولة",
+    "List of all affiliate profits": "قائمة بجميع أرباح التسويق بالعمولة",
+    "Received": "تم الاستلام",
+    "No profits found.": "لا توجد أرباح",
+    "Phone number": "رقم الهاتف",
+    "Withdraw Profits": "سحب الأرباح",
+    "Available Profits": "الأرباح المتاحة",
+    "Total Profits": "إجمالي الأرباح",
+    "Invite Code": "رمز الدعوة",
+    "Referral Users Count": "عدد المستخدمين المُحالين"
 }
