--- a/lang/en.json
+++ b/lang/en.json
@@ -270,5 +270,20 @@
     "Address Copied": "Address Copied",
     "لا يوجد كافية رصيد للاستفادة من هذه الخدمة": "لا يوجد كافية رصيد للاستفادة من هذه الخدمة",
     "تم تأكيد طلب السحب بنجاح": "تم تأكيد طلب السحب بنجاح",
-    "تم رفض طلب السحب بنجاح": "تم رفض طلب السحب بنجاح"
+    "تم رفض طلب السحب بنجاح": "تم رفض طلب السحب بنجاح",
+    "My Wallet": "My Wallet",
+    "Affiliate  History": "Affiliate  History",
+    "Affiliate Profits": "Affiliate Profits",
+    "List of all affiliate profits": "List of all affiliate profits",
+    "Received": "Received",
+    "No profits found.": "No profits found.",
+    "Phone number": "Phone number",
+    "Withdraw Profits": "Withdraw Profits",
+    "Available Profits": "Available Profits",
+    "Total Profits": "Total Profits",
+    "اسم العضو": "اسم العضو",
+    "الربح اليومي": "الربح اليومي",
+    "اجمالي الربح ": "اجمالي الربح ",
+    "Invite Code": "Invite Code",
+    "Referral Users Count": "Referral Users Count"
 }
